hometasks/hw-3/nat.tf
resource "aws_eip" "nat_eip" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id = aws_subnet.public[0].id 

  depends_on = [ aws_internet_gateway.igw ]
  tags = var.tags
}
